[gd_scene load_steps=10 format=3 uid="uid://jx51hdx7xmwv"]

[ext_resource type="FontFile" uid="uid://byt31ylsqbup1" path="res://fuente.ttf" id="1_6d10s"]
[ext_resource type="Script" path="res://code/inicio.gd" id="1_68t86"]
[ext_resource type="Texture2D" uid="uid://cs3kfjyqsa7qi" path="res://Images/Motocross/fondoRecursos.png" id="1_vpul6"]
[ext_resource type="AudioStream" uid="uid://dsyrttjiauvd7" path="res://Audio/musicaIntro.ogg" id="4_nu87w"]
[ext_resource type="AudioStream" uid="uid://dur3n4owdwwm0" path="res://Audio/click.ogg" id="5_n5t3g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gmrmn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu0wo"]
bg_color = Color(0.974438, 0.690468, 0.339434, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sq36v"]
bg_color = Color(0.572639, 0.366483, 0.0635207, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvj1k"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.811238, 0.512865, 0.159762, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(0, 10)

[node name="TitleScreen" type="PanelContainer"]
offset_right = 1921.0
offset_bottom = 1077.0
script = ExtResource("1_68t86")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_vpul6")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 12
theme_override_constants/shadow_offset_y = 23
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("1_6d10s")
theme_override_font_sizes/font_size = 200
text = "     GAS & CASH  "

[node name="Botones" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="btnStart" type="Button" parent="VBoxContainer/Botones"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("1_6d10s")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_gmrmn")
theme_override_styles/hover = SubResource("StyleBoxFlat_yu0wo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sq36v")
theme_override_styles/normal = SubResource("StyleBoxFlat_hvj1k")
text = "  JUGAR  "

[node name="btnOpcion" type="Button" parent="VBoxContainer/Botones"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("1_6d10s")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_gmrmn")
theme_override_styles/hover = SubResource("StyleBoxFlat_yu0wo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sq36v")
theme_override_styles/normal = SubResource("StyleBoxFlat_hvj1k")
text = "  CRÃ‰DITOS "

[node name="btnSalir" type="Button" parent="VBoxContainer/Botones"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("1_6d10s")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_gmrmn")
theme_override_styles/hover = SubResource("StyleBoxFlat_yu0wo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sq36v")
theme_override_styles/normal = SubResource("StyleBoxFlat_hvj1k")
text = "  SALIR  "

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nu87w")
autoplay = true
parameters/looping = true

[node name="clikBoton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_n5t3g")

[connection signal="mouse_entered" from="VBoxContainer/Botones/btnStart" to="." method="_on_btn_start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Botones/btnStart" to="." method="_on_btn_start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Botones/btnOpcion" to="." method="_on_btn_opcion_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Botones/btnOpcion" to="." method="_on_btn_opcion_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Botones/btnSalir" to="." method="_on_btn_salir_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Botones/btnSalir" to="." method="_on_btn_salir_pressed"]
